--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "style-loader": "^2.0.0",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.3.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.20"
   }
 }
