--- a/packages.config
+++ b/packages.config
@@ -4,6 +4,8 @@
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
   <package id="DnsClient" version="1.3.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="ExpressionEvaluator" version="2.0.4.0" targetFramework="net472" />
+  <package id="GSF.Core" version="2.3.302" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="Knockout.Validation" version="2.0.3" targetFramework="net472" />
   <package id="knockoutjs" version="3.5.0" targetFramework="net472" />
